api: add /api/v1/stats/profile_installations
Counts how many time a profile was build
