# asu/openapi.yml
@@ -32,6 +32,75 @@ paths:
               schema:
                 $ref: '#/components/schemas/JsonSchemaOverview'
 
+  /api/v1/stats/profiles/{branch}:
+    get:
+      summary: See profile installations of specified branch
+      operationId: asu.api.api_v1_stats_profiles
+      parameters:
+      - name: branch
+        in: path
+        description: |
+          Return a sorted array with tuples including the number of
+          built images with specific profile.
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Stats found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/JsonSchemaStatsProfiles'
+
+  /api/v1/stats/packages/{branch}:
+    get:
+      summary: See profile installations of specified branch
+      operationId: asu.api.api_v1_stats_packages
+      parameters:
+      - name: branch
+        in: path
+        description: |
+          Return a sorted array with tuples including the number of
+          built images with specific package.
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Stats found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/JsonSchemaStatsPackages'
+
+  /api/v1/stats/targets/{branch}:
+    get:
+      summary: See profile installations of specified branch
+      operationId: asu.api.api_v1_stats_targets
+      parameters:
+      - name: branch
+        in: path
+        description: |
+          Return a sorted array with tuples including the number of
+          built images with specific target.
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Stats found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/JsonSchemaStatsTargets'
+
   /api/build:
     post:
       deprecated: true
@@ -540,3 +609,54 @@ components:
             contact:
               type: string
               example: mail@aparcar.org
+
+    JsonSchemaStatsProfiles:
+      type: object
+      additionalProperties: false
+      required:
+        - branch
+        - profiles
+      properties:
+        branch:
+          type: string
+          example: 19.07
+          description: Showing stats of that branch
+        profiles:
+          type: array
+          items:
+            type: array
+            items: {}
+
+    JsonSchemaStatsPackages:
+      type: object
+      additionalProperties: false
+      required:
+        - branch
+        - packages
+      properties:
+        branch:
+          type: string
+          example: 19.07
+          description: Showing stats of that branch
+        packages:
+          type: array
+          items:
+            type: array
+            items: {}
+
+    JsonSchemaStatsTargets:
+      type: object
+      additionalProperties: false
+      required:
+        - branch
+        - targets
+      properties:
+        branch:
+          type: string
+          example: 19.07
+          description: Showing stats of that branch
+        targets:
+          type: array
+          items:
+            type: array
+            items: {}
